<resources>
    <string name="app_name">Trackr</string>
    <string name="Title">Welcome to Your Smart Wallet 💰 </string>
    <string name="ob1">Track your income, expenses, and stay in control of your finances </string>
    <string name="onboarding2">See Where Your Money Goes 💸</string>
    <string name="ob2">  📈 Visualize your spending, set budgets and get insights.</string>
    <string name="ob3">  💳 Add transactions, get insights, and crush your financial goals.</string>
    <string name="getStarted">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="ob3n">Start Managing Smart</string>
    <string name="name">Username</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="addT">Add Transactions</string>
    <string name="add">add</string>
    <string name="settings">Settings</string>
    <string name="welcome"> Welcome , Himaya !</string>
    <string name="backhome"> ← Back to Home Page</string>
    <string name="addt"> ➕ Add Transactions </string>
    <string name="setbdgt"> 💼 Set Budget</string>
    <string name="CategoryAnalysis"> 📊 Category Analysis</string>
    <string name="bkpnrstr"> ⚙️ Settings</string>
    <string name="saveSettingsBtn">saveSettingsBtn</string>
    <string name="select_date">Select Date</string>
</resources>